cmake_minimum_required(VERSION 3.21)
project(Altu-Bitu-ChoSubeen)

set(CMAKE_CXX_STANDARD 17)

add_executable(Altu-Bitu-ChoSubeen
        04_brute_force/1436.cpp
        #04_brute_force/1063.cpp
        #03_number_theory/2840.cpp
        #03_number_theory/1735.cpp
        #02_stack_queue_deque/17298.cpp
        #02_stack_queue_deque/4949.cpp
        #02_stack_queue_deque/1158.cpp
        #02_stack_queue_deque/10757.cpp
        #01_sort_map_set/19636.cpp
        #01_sort_map_set/14425.cpp
        #01_sort_map_set/1431.cpp

        )
